force-app/main/default/objects/ERP_Invoice_Source__c/ERP_Invoice_Source__c.object-meta.xml
<CustomObject>
    <description>Stores the linkage between Invoice and Event/Expense</description>
    <label>ERP Invoice Source</label>
    <nameField>
        <displayFormat>IS-{YYYY}{MM}-{0}</displayFormat>
        <label>ERP Invoice Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Invoice Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>