force-app/main/default/objects/ERP_Invoice_Source__c/fields/ERP_Invoice_Detail__c.field-meta.xml
<CustomField>
    <fullName>ERP_Invoice_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Invoice Detail</label>
    <referenceTo>ERP_Invoice_Detail__c</referenceTo>
    <relationshipName>Invoice_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>