force-app/main/default/objects/ERP_Invoice_Source__c/fields/ERP_PPM_Event__c.field-meta.xml
<CustomField>
    <fullName>ERP_PPM_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP PPM Event</label>
    <referenceTo>ERP_PPM_Event__c</referenceTo>
    <relationshipName>Invoice_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>