force-app/main/default/objects/ERP_Invoice_Source__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipName>Invoice_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>